# awfuldb

./: Cargo.toml  README.md  aql.pest  testing.http
.github/workflows/: static.yml
page/: index.html
src/: _test_data.rs  config.rs  database.rs  header.rs  main.rs  operations.rs  query.rs  shape.rs  test_data.rs  types.rs
