[package]
name = "awfuldb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
arrayvec = "0.7"
rkyv = { version = "0.7", features = ["validation", "archive_le"] } # size_64??
anyhow = "1.0"
rustc-hash = "1.1"
#chrono = { version = "0.4.26", features = ["rkyv"] }
